--- a/modules/ROOT/pages/prerequisites/index.adoc
+++ b/modules/ROOT/pages/prerequisites/index.adoc
@@ -36,7 +36,7 @@ For _best performance_, _stability_, _support_, and _full functionality_ we offi
 * openSUSE Leap 15.2 and 15.3
 * Ubuntu 20.04
 
-In addition, we strongly recommend a reverse proxy for security reasons, load balancing and high availability, e.g., {traefik-url}[Traefik], {apache-rev-url}[Apache] or {nginx.url}[NGINX].
+In addition, we strongly recommend a reverse proxy for security reasons, load balancing and high availability, e.g., {traefik-url}[Traefik], {apache-rev-url}[Apache] or {nginx-url}[NGINX].
 
 == Storage
 
