--- a/modules/ROOT/pages/architecture/index.adoc
+++ b/modules/ROOT/pages/architecture/index.adoc
@@ -44,6 +44,14 @@ Einstein copies the URL in the browser (or an email with the same URL is sent au
 
 When Marie enters that URL, she will be presented with a login form on the `https://cloud.zurich.test` instance, because the share was created on that domain. If `https://cloud.zurich.test` trusts her OpenID Connect identity provider `https://idp.paris.test`, she can log in. This time, the storage space registry discovery will come up with `https://cloud.paris.test` though. Since that registry is different than the registry tied to `https://cloud.zurich.test`, oCIS Web can look up the storage space `716199a6-00c0-4fec-93d2-7e00150b1c84` and register the WebDAV URL `https://cloud.zurich.test/dav/spaces/716199a6-00c0-4fec-93d2-7e00150b1c84/a/rel/path` in Marie`s storage space registry at `https://cloud.paris.test`. When she accepts that share, her clients will be able to sync the new storage space at `https://cloud.zurich.test`.
 
+=== Spaces
+
+A storage space is a logical concept. It organizes a set of resources in a hierarchical tree. It has a single owner (user or group), a quota, permissions and is identified by a `storage space id`. Examples would be every user’s personal storage space, project storage spaces or group storage spaces. They may serve different purposes and have different workflows enabled like anti-virus scanning.
+
+A storage spaces registry then allows listing the capabilities of storage spaces, e.g. free space, quota, owner, syncable, root ETag, upload workflow steps...
+
+For detailed information on the implementation of spaces, check out the https://owncloud.dev/extensions/storage/spaces/[Developer Guide].
+
 === oCIS Microservice Runtime
 
 oCIS runtime allows us to dynamically manage services running in a single process. We use {suture-url}[suture] to create a supervisor tree that starts each service in a dedicated Go routine. By default, oCIS will start all built-in oCIS extensions in a single process. Individual services can be moved to other nodes to scale out and meet specific performance requirements. A {go-micro-url}[go-micro-based] registry allows services in multiple nodes to form a distributed microservice architecture.
