just some minor fixes

--- a/modules/ROOT/pages/deployment/index.adoc
+++ b/modules/ROOT/pages/deployment/index.adoc
@@ -113,12 +113,12 @@ include::{latest-server-version}@server:admin_manual:page$installation/deploymen
 
 === Traefik
 
-A reverse proxy is highly recommended for load balancing and security reasons. You'll also need it if you intend to run oCIS and an ownCloud 10 server in parallel before migrating. If you choose Traefik for your deployment, check out the {traefik-url}[documentation]. You'll see several options. In case you want to run it in a docker container, consider using the version from the oCIS stack.
+A reverse proxy is highly recommended for load balancing and security reasons. You'll also need it if you intend to run oCIS and an ownCloud 10 server in parallel before migrating. If you choose Traefik for your deployment, check out the {traefik-url}[documentation]. You'll see several options. In case you want to run it in a Docker container, consider using the version from the oCIS Docker stack.
 
 
 === WOPI Server
 
-A WOPI server allows you to integrate online Office software including Microsoft Office Online and Collabora Online. It can be installed with the package manager of your operating system and is also provided as a docker container.
+The Web Application Open Platform Interface (WOPI) protocol allows you to integrate online office software in oCIS, including Microsoft Office Online and Collabora Online. It can be installed with the package manager of your operating system and is also provided as a docker container.
 
 
 == Setup with Docker
