--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -1,8 +1,13 @@
 * xref:index.adoc[Introduction]
 * ownCloud Infinite Scale 
 ** xref:prerequisites/index.adoc[Prerequisites]
-** xref:architecture/index.adoc[Architecture and Conecpts]
+** xref:architecture/index.adoc[Architecture and Concepts]
 ** xref:deployment/index.adoc[Deployment]
+*** xref:deployment/manual/manual-setup.adoc[Manual Setup]
+*** xref:deployment/docker/docker-setup.adoc[Docker Setup]
+*** xref:deployment/security.adoc[Securing oCIS]
+*** xref:deployment/nfs.adoc[Network File System Deployment]
+*** xref:extensions/index.adoc[Extensions]
 ** xref:migration/index.adoc[Migrating from ownCloud 10 to ownCloud Infinite Scale]
 ** xref:configuration/index.adoc[Configuration]
 ** xref:maintenance/index.adoc[Maintenance]
