--- a/modules/ROOT/pages/configuration/index.adoc
+++ b/modules/ROOT/pages/configuration/index.adoc
@@ -4,7 +4,9 @@
 
 The configuration of ownCloud Infinite Scale is simple yet powerful and extremely flexible. If you have downloaded the binary from ownCloud directly instead of installing it via the package manager of your Linux operating system, copy or move the file to `/usr/bin/ocis` and make it executable with the command: `chmod +x /usr/bin/ocis`.
 
-Enter `ocis help` and you'll see the all available options for the command.
+Enter `ocis help` and you'll see all available options for the command.
+
+Configuration can either be done via environment variables or in configuration files. If you decide to use configuration files, keep in mind that changing environment variables supersedes the settings in these files.
 
 == Overview Configuration Files
 
@@ -20,8 +22,6 @@ If you have a systemd service configured for oCIS, you have your environment fil
 // CAUTION: `accounts.yaml` and `proxy.yaml` overwrite the values set in `ocis.yaml`.
 
 == Environment Variables
-
-== Workflows
 
 == Shared Values
 
