--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -10,4 +10,10 @@
 *** xref:extensions/index.adoc[Extensions]
 ** xref:migration/index.adoc[Migrating from ownCloud 10 to ownCloud Infinite Scale]
 ** xref:configuration/index.adoc[Configuration]
+*** xref:configuration/external-user-management.adoc[Management of External Users]
+*** xref:configuration/email-config.adoc[Mail Server Configuration]
+*** xref:configuration/storage.adoc[Storage Configuration]
+*** xref:configuration/office-integrations.adoc[Integrating Office Applications]
+*** xref:configuration/license-keys.adoc[License Keys]
+*** xref:configuration/roles-permissions.adoc[Roles & Permissions]
 ** xref:maintenance/index.adoc[Maintenance]
