--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -10,6 +10,7 @@
 *** xref:extensions/index.adoc[Extensions]
 ** xref:migration/index.adoc[Migrating from ownCloud 10 to ownCloud Infinite Scale]
 ** xref:configuration/index.adoc[Configuration]
+*** xref:configuration/ocis-config.adoc[Configuration of ownCloud Infinite Space]
 *** xref:configuration/external-user-management.adoc[Management of External Users]
 *** xref:configuration/email-config.adoc[Mail Server Configuration]
 *** xref:configuration/storage.adoc[Storage Configuration]
@@ -17,3 +18,4 @@
 *** xref:configuration/license-keys.adoc[License Keys]
 *** xref:configuration/roles-permissions.adoc[Roles & Permissions]
 ** xref:maintenance/index.adoc[Maintenance]
+
