--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,14 +1,33 @@
 = Introduction to ownCloud Infinite Scale
 :toc: right
-:toclevels: 1
+:toclevels: 2
 
-Welcome to the ownCloud Infinite Scale (oCIS) documentation. This guide provides information on installation and administration tasks for oCIS, the next generation of open source file sharing and synchronization solutions. There is no need for PHP or a database, which allows for high performance, flexibility and scalability. Check out the short list of [prerequisites]. With oCIS, not much is needed to run your own cloud server the way you want.
+:description: Welcome to the ownCloud Infinite Scale (oCIS) documentation. This guide provides information on installation and administration tasks for oCIS, the next generation of open source file sharing and synchronization solutions.
+
+{description}
+
+oCIS key benefits:
+
+* No need for PHP or a database
+* High performance, flexibility and scalability
+* Extended functionality
+
+With oCIS, not much is needed to run your ownCloud server the way you want. Check out the short list of [prerequisites].
+
+== Brief Overview
+
+=== Installation
 
 One of the first decisions you'll have to make is whether to user docker for oCIS, run it in a virtual machine or simply on a bare metal server. If you're unsure, check out the xref:architecture/index.adoc[Architecture and Concepts] section first, then take a look at the xref:deployment/index.adoc[deployment] options.
 
-If you already have an ownCloud 10 server running, you'll find the xref:migration/index.adoc[Migration] section most interesting.
+=== Configuration
 
 xref:configuration/index.adoc[Configuration] of oCIS is quite different to what you're used to and has never been easier. It works with environment variables and optional configuration files for you to create depending on your specific needs. The settings in configuration files can always be overruled by setting the respective environment variables manually on the command line.
 
+=== Maintenance
+
 Since the integrity and sovereignty of your data is the really important thing when it comes to working in a cloud, you'll need to perform regular backups of your data and keep your oCIS up to date. You'll find everything you need to know in the xref:maintenance/index.adoc[Maintenance] section.
 
+== Upgrading from ownCloud 10
+
+If you already have an ownCloud 10 server running, you'll find the xref:migration/index.adoc[Migration] section most interesting.
