--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -12,7 +12,7 @@ oCIS key benefits:
 * High performance, flexibility and scalability
 * Extended functionality
 
-With oCIS, not much is needed to run your ownCloud server the way you want. Check out the short list of [prerequisites].
+With oCIS, not much is needed to run your ownCloud server the way you want. Check out the short list of xref:prerequisites/index.adoc[prerequisites].
 
 == Brief Overview
 
