--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -4,6 +4,8 @@
 
 :description: Welcome to the ownCloud Infinite Scale (oCIS) documentation. This guide provides information on installation and administration tasks for oCIS, the next generation of open source file sharing and synchronization solutions.
 
+== Introduction
+
 {description}
 
 oCIS key benefits:
@@ -16,9 +18,11 @@ oCIS key benefits:
 // fixme: we should have a cross component link to owncloud web when available
 // fixme: shall we have a feature list page ?
 
-With oCIS, not much is needed to run your ownCloud server the way you want. Check out the short list of xref:prerequisites/index.adoc[prerequisites].
-
 == Brief Overview
+
+=== Prerequisites
+
+With oCIS, not much is needed to run your ownCloud server the way you want. Check out the short list of xref:prerequisites/index.adoc[prerequisites].
 
 === Installation
 
