--- a/modules/ROOT/pages/prerequisites/index.adoc
+++ b/modules/ROOT/pages/prerequisites/index.adoc
@@ -13,7 +13,7 @@
 :traefik-url: https://doc.traefik.io/traefik/
 :apache-rev-url: https://httpd.apache.org/docs/2.4/howto/reverse_proxy.html
 
-:description: The prerequisites described give an overview and background about minimum requirements with respect to hardware, operating system and optional additional software to operate oCIS successfully.
+:description: The prerequisites section gives an overview and background about minimum requirements with respect to hardware, operating system and optional additional software to operate oCIS successfully.
 
 == Introduction
 
@@ -23,9 +23,7 @@
 
 // fixme: what are the real minimum physical hardware requirements or what is definitely excluded
 
-The minimum hardware requirements depend on the usecase you plan for your oCIS instance. At minimum you need hardware that runs a 64bit Linux based Operating System. This means, you can start with a hardware environment, eg for testing, running on a laptop or a Raspberry PI.
-
-Because oCIS with its webinterface ownCloud Web is shipped as a single binary, you can migrate your instance with the configurations and the OS setup made with minimal effort to a more capable hardware satisfying your needs.
+The minimum hardware requirements depend on the deployment scenario you have in mind for your oCIS instance. You need at least hardware that runs a 64bit Linux operating system. For simple testing purposes, you can even use a laptop or Raspberry Pi.
 
 === RAM Considerations
 
@@ -33,13 +31,15 @@ Because oCIS with its webinterface ownCloud Web is shipped as a single binary, y
 
 The RAM requirements are mainly based on caching inodes and meta-data (ETags).
 
-NOTE: Your RAM requirements may change over time dependent on the amount of users accessing an increasing amount of data from different sources concurrently.
+NOTE: Your RAM requirements may change over time depending on the amount of users accessing an increasing amount of data from different sources concurrently.
 
 Calculation example:
 
 For a single machine using a local posix storage, the Linux kernel already caches the inodes that contain the metadata that is necessary to calculate the ETag (even extended attributes are supported).
 
-With 4k inodes, the following RAM is needed to completely cache the ETags.
+// fixme: Zusammenhang von inode/etag und client (files/directories)
+
+With 4k inodes, the following RAM is needed to completely cache the ETags:
 
 [width="40%",cols="30%,50%",options="header"]
 |===
@@ -63,18 +63,18 @@ NOTE: For distributed file systems, a dedicated cache might make sense to preven
 Each storage mounted provides a virtual root to the user and enables access to the data underneath. Whenever a file changes its content or metadata, the ETag or “entity tag” changes. To let a client detect changes in a provided storage - which is a tree of files and folders - the ETag of every node in that tree is used. The discovery phase starts at the root of the tree and checks if the ETag has changed since the last discovery.
 
 Backend Check::
-A gateway is used as common source for all clients to cache virtual ETags from provided storages. Checks for  changes are made every 30 seconds, the value is configurable to adapt to storage IO load.
+A gateway is used as common source for all clients to cache virtual ETags from provided storages. Checks for changes are made every 30 seconds, the value is configurable to adapt to storage IO load.
 
 Client Check::
-Usually, every client connected polls the virtual root ETag every 30 sec.
+Usually, every connected client polls the virtual root ETag every 30 seconds.
 
-Since the active clients will poll the ETag for all active users, the gateway will have their ETag cached. This is also true where sharing comes into play. The gateway request the ETag of all mount or entry points to eliminate concurrent caclulation requests triggered by clients for the same ETag. For this reason, RAM is a crucial performance factor.
+Since active clients will poll the ETag for all active users, the gateway will have their ETag cached. This is also true where sharing comes into play. The gateway requests the ETag of all mount or entry points to eliminate concurrent calculation requests triggered by clients for the same ETag. For this reason, RAM is a crucial performance factor.
 
 === Bandwidth Considerations
 
-The bandwith requirements respectively limitations are based on following background:
+The bandwidth requirements and limitations are based on following background:
 
-When a client triggers a request to manage eg documents and versions (aka PROPFIND), it triggers internally a check on changed ETags. Expect to have with the request about 500 bytes and a response with roughly 800 bytes in size. This will result in following calculation with regards to the bandwith:
+When a client triggers a request to manage e.g. documents and versions (aka PROPFIND), it triggers internally a check on changed ETags. A request of about 500 bytes and a response with roughly 800 bytes in size will result in the following bandwidth requirements:
 
 [width="55%",cols="50%,80%",options="header"]
 |===
@@ -91,7 +91,7 @@ When a client triggers a request to manage eg documents and versions (aka PROPFI
 | 1.250.000
 |===
 
-NOTE: Bandwidth can be scaled by adding more gateways and sharing users, because these components are stateless.
+NOTE: Bandwidth can be scaled by adding more gateways and distributing users between them because these components are stateless.
 
 == Supported Operating Systems
 
@@ -100,25 +100,23 @@ For _best performance_, _stability_, _support_, and _full functionality_ we offi
 * Debian 10 and 11
 * Fedora 32 and 33
 * Red Hat Enterprise Linux/Centos 7.5 and 8
-* SUSE Linux Enterprise Server 12 with SP4/5 and 15
+* SUSE Linux Enterprise Server 12 with SP4/5 and SLES 15
 * openSUSE Leap 15.2 and 15.3
 * Ubuntu 20.04
 
 == Additional Software
 
-It is strongly recommend to use a reverse proxy for:
+It is strongly recommend to use a reverse proxy like {traefik-url}[Traefik], {nginx-url}[NGINX] or {apache-rev-url}[Apache] for:
 
-. Security reasons
-. Load balancing and
-. High availability
-
-like {traefik-url}[Traefik], {nginx-url}[NGINX] or {apache-rev-url}[Apache].
+. security reasons,
+. load balancing and
+. high availability.
 
 // fixme: links to how to setup these things, maybe external links will work well too
 
 == Filesystems and External Storage
 
-In addition to well known metadata like _name_, _size_ and _mtime_ (time a file was last modified), oCIS allows users to add arbitrary metadata like _tags_ and _comments_. Therefore oCIS requires and works with POSIX-compliant file systems where this metadata can be mapped to extended attributes. S3 storage is supported too, but requires POSIX compliant local storage for meta data persistance.
+In addition to well known metadata like _name_, _size_ and _mtime_ (time a file was last modified), oCIS allows users to add arbitrary metadata like _tags_ and _comments_. Therefore oCIS requires and works with POSIX-compliant file systems where this metadata can be mapped to extended attributes. S3 storage is supported too, but requires POSIX-compliant local storage for meta data persistance.
 
 The main POSIX-compliant file systems currently supported by oCIS are:
 
